@@ -1,2 +1,13 @@
 # redis-client
-A simple GUI tool for Redis
+A simple GUI client for Redis.
+
+Jedis client is used at this project for sending commands to Redis. 
+
+# Development
+add this argument to VM options
+`--module-path path_of_javafx-sdk/lib --add-modules javafx.controls,javafx.fxml`
+
+# Requirement
+1. JDK 14
+2. JAVAFX 14
+
